# uk-pubs-connectors

./: .gitignore  README.md  setup.cfg  setup.py  stonegate.txt
tests/: admiral_taverns.py
uk_pubs/: utils.py
uk_pubs/admiral_taverns/: connector.py  data_processor.py  etl.py
uk_pubs/greene_king/: connector.py  constants.py  data_processor.py  etl.py
uk_pubs/punch_pubs/: connector.py  constants.py  data_processor.py  etl.py
uk_pubs/stonegate/: connector.py  constants.py  data_processor.py  etl.py
uk_pubs/wellington_pub_company/: connector.py  data_processor.py  etl.py
uk_pubs_connectors/: admiral_taverns.py  utils.py
uk_pubs_etls/: admiral_taverns_etl.py
