[metadata]
name = uk-pubs-connectors
version = attr: uk_pubs_connectors.VERSION
description = Connectors to UK Pubs data, from different data sources
long_description = file: README.md
keywords = uk, pubs, etl
url = https://bitbucket.dkpartners.com/projects/BELO/repos/uk-pubs-connectors/browse
# license_files = LICENSE.txt
author = Carlos Alberto Duarte Pinto
author_email = cpinto@dkp.com

[options]
packages = find:
install_requires =
    pandas
    requests
    lxml
    googlemaps
    python-dotenv

[options.entry_points]
console_scripts =
    admiral-taverns-etl = uk_pubs_etls.admiral_taverns_etl:main
