[metadata]
name = uk-pubs
version = attr: uk_pubs.VERSION
description = UK Pubs connectors library
long_description = file: README.md
keywords = uk, pubs, etl
url = https://bitbucket.dkpartners.com/projects/BELO/repos/uk-pubs-connectors/browse
# license_files = LICENSE.txt
author = Carlos Alberto Duarte Pinto
author_email = cpinto@dkp.com

[options]
packages = find:
install_requires =
    pandas
    requests
    lxml
    googlemaps
    python-dotenv

[options.entry_points]
console_scripts =
    admiral-taverns-etl = uk_pubs.admiral_taverns.etl:main
