[metadata]
name = uk-pubs
version = attr: uk_pubs.VERSION
description = UK Pubs connectors library
long_description = file: README.md
keywords = uk, pubs, etl
url = https://bitbucket.dkpartners.com/projects/BELO/repos/uk-pubs-connectors/browse
# license_files = LICENSE.txt
author = Carlos Alberto Duarte Pinto
author_email = cpinto@dkp.com

[options]
packages = find:
install_requires =
    pandas
    requests
    lxml
    googlemaps
    python-dotenv

[options.entry_points]
console_scripts =
    admiral-taverns-etl = uk_pubs.admiral_taverns.etl:main
    greene-king-etl = uk_pubs.greene_king.etl:main
    punch-pubs-etl = uk_pubs.punch_pubs.etl:main
    stonegate-etl = uk_pubs.stonegate.etl:main
    wellington-pub-company-etl = uk_pubs.wellington_pub_company.etl:main
